--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,7 +2,7 @@ h1 {
   border-bottom: 1px solid black;
 }
 .container{
-  max-width: fit-content;
+  /*background-color: aqua;*/
 }
 
 .row{
@@ -14,6 +14,8 @@ h1 {
 .vertical-menu {
   width: 200px;
   margin-top: 25px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .vertical-menu a {
@@ -32,17 +34,23 @@ h1 {
   background-color: #000;
   color: white;
 }
+
 .input-group{
   margin-top: 15px;
 }
-.jumbotron{
-  margin-top: 25px;
-  width: 250px;
-  height: 200px;
-}
+
 .cards{
   margin-top: 25px;
+  display: flex;
+  justify-content: space-between;
 }
+
+.side-bar{
+  /*background-color: crimson;*/
+  margin-top: 25px;
+  display: flex;
+}
+
 h2{
   size: 14px;
 }
